feat: add update possession endpoint
