# src/types/dataAccess.ts
@@ -3,4 +3,5 @@ import { CreatePossessionRequest, Possession } from "./possessions";
 export interface DataStore {
   getPossessions(): Possession[];
   createPossession(possessionRequest: CreatePossessionRequest): string;
+  updatePossession(possession: Possession): void;
 }
